// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'store' > query 'ListOperationResolver' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ListOperationResolver",
      "resolvers": {
        "productsByUpcs": {
          "exports": [
            {
              "kind": "scalar",
              "name": "upc",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "manufacturer",
              "selections": [
                {
                  "kind": "object",
                  "name": "products",
                  "selections": [
                    {
                      "kind": "scalar",
                      "name": "upc",
                    },
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                },
                {
                  "kind": "scalar",
                  "name": "id",
                  "private": true,
                },
              ],
            },
          ],
          "includes": {
            "manufacturer": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
              ],
              "includes": {},
              "inlineVariables": {},
              "kind": "object",
              "ofType": "Manufacturer",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
              "pathToExportData": [
                "manufacturer",
              ],
              "subgraph": "manufacturers",
              "type": "Manufacturer",
              "variables": {
                "Manufacturer_id": {
                  "kind": "select",
                  "name": "Manufacturer_id",
                  "select": "id",
                },
              },
            },
          },
          "inlineVariables": {
            "upcs": [
              "galaxy",
              "iphone",
            ],
          },
          "kind": "object",
          "ofType": "Product",
          "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
          "pathToExportData": [
            "productsByUpcs",
          ],
          "subgraph": "products",
          "type": "[Product]!",
          "variables": {
            "upcs": {
              "kind": "user",
              "name": "upcs",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ListOperationResolver {
  productsByUpcs(upcs: ["galaxy", "iphone"]) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      name
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
                {
                  "kind": "object",
                  "name": "manufacturer",
                  "selections": [
                    {
                      "kind": "object",
                      "name": "products",
                      "selections": [
                        {
                          "kind": "scalar",
                          "name": "upc",
                        },
                        {
                          "kind": "scalar",
                          "name": "name",
                        },
                      ],
                    },
                    {
                      "kind": "scalar",
                      "name": "id",
                      "private": true,
                    },
                  ],
                },
              ],
              "includes": {
                "manufacturer": {
                  "exports": [
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "object",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithOperationVariables",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
                {
                  "kind": "object",
                  "name": "manufacturer",
                  "selections": [
                    {
                      "kind": "object",
                      "name": "products",
                      "selections": [
                        {
                          "kind": "scalar",
                          "name": "upc",
                        },
                        {
                          "kind": "scalar",
                          "name": "name",
                        },
                      ],
                    },
                    {
                      "kind": "scalar",
                      "name": "id",
                      "private": true,
                    },
                  ],
                },
              ],
              "includes": {
                "manufacturer": {
                  "exports": [
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "object",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {},
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInOperation",
      "resolvers": {
        "productNames": {
          "inlineVariables": {},
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productNames {
  productNames
}",
          "pathToExportData": [
            "productNames",
          ],
          "subgraph": "products",
          "type": "[String!]!",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInOperation {
  productNames
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInType' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInType",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "productNames",
            },
          ],
          "includes": {},
          "inlineVariables": {
            "id": "apple-store",
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    productNames
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInType {
  storefront(id: "apple-store") {
    productNames
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationField",
      "resolvers": {
        "manufacturerName": {
          "inlineVariables": {
            "id": "samsung",
          },
          "kind": "scalar",
          "ofType": "String",
          "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
          "pathToExportData": [
            "manufacturerName",
          ],
          "subgraph": "manufacturers",
          "type": "String",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationField {
  manufacturerName(id: "samsung")
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationFieldNested",
      "resolvers": {
        "productName": {
          "inlineVariables": {
            "upc": "ipad",
          },
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
          "pathToExportData": [
            "product",
            "name",
          ],
          "subgraph": "products",
          "type": "String",
          "variables": {
            "upc": {
              "kind": "user",
              "name": "upc",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationFieldNested {
  productName(upc: "ipad")
}",
}
`;

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    id
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        id
        name
        products {
          manufacturer {
            location
          }
          name
        }
      }
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'MultipleTypes' resolver 1`] = `
{
  "operation": "query MultipleTypes {
  productAndManufaturer {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        id
      }
    }
    ... on Manufacturer {
      id
      name
      products {
        manufacturer {
          location
        }
        name
      }
    }
  }
}",
  "pathToExportData": [
    "productAndManufaturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'Nested' resolver 1`] = `
{
  "operation": "query Nested {
  product {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        ... on Manufacturer {
          id
          name
          products {
            manufacturer {
              location
            }
            name
          }
        }
      }
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
